--- a/data/index.html
+++ b/data/index.html
@@ -324,6 +324,8 @@
         .catch(error => console.error('Error fetching current date and time:', error));
     }
 
+    
+
     function changeVolume(value) {
       fetch('/changeVolume', {
         method: 'POST',
@@ -754,6 +756,7 @@
       fetchSavedAlarm();
       fetchWiFiStatus();
       scanNetworks();
+      fetchCurrentDateTime();
       //checkBridgeConnection();
       
     };
